feat: change bg color fade

--- a/static/main.css
+++ b/static/main.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 .body {
-    @apply bg-gradient-to-br from-zinc-300 via-[#f2e1eb] to-zinc-300 dark:bg-gradient-to-br dark:from-slate-900 dark:via-[#013247] dark:to-slate-900 h-screen overflow-y-scroll
+    @apply bg-gradient-to-br from-zinc-300 via-[#f7e4ea] to-zinc-300 dark:bg-gradient-to-br dark:from-slate-900 dark:via-[#013247] dark:to-slate-900 h-screen overflow-y-scroll
 }
